--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.9.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "convex": "^1.17.4",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "react": "^19.0.0",
